kube/tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-tracker-backend-deployment
  labels:
    app: expenses-tracker-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses-tracker-backend
  template:
    metadata:
      labels:
        app: expenses-tracker-backend
    spec:
      containers:
        - name: expenses-tracker-backend
          image: rahulshome/expenses-tracker-backend:v1
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: "0.25"
            limits:
              memory: 1024Mi
              cpu: "0.50"
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-tracker-ui-deployment
  labels:
    app: expenses-tracker-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses-tracker-ui
  template:
    metadata:
      labels:
        app: expenses-tracker-ui
    spec:
      containers:
        - name: expenses-tracker-ui
          image: rahulshome/expenses-tracker-ui:v1
          imagePullPolicy: Always
          resources:
            requests:
              memory: 128Mi
              cpu: "0.25"
            limits:
              memory: 256Mi
              cpu: "0.50"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: expenses-tracker-backend-service
spec:
  ports:
    - port: 80
  selector:
    app: expenses-tracker-backend

---
apiVersion: v1
kind: Service
metadata:
  name: expenses-tracker-ui-service
spec:
  ports:
    - port: 80
  selector:
    app: expenses-tracker-ui
